fix(core): contrast colors
- fix shim alignment colors with button/card for clr-angular compat

--- a/packages/core/src/card/card.element.scss
+++ b/packages/core/src/card/card.element.scss
@@ -10,3 +10,7 @@
 
   --card-remove-margin: var(--cds-global-space-8);
 }
+
+::slotted([cds-card-remove-margin]) {
+  --color: #{$cds-alias-object-container-border-color};
+}
