--- a/packages/core/src/styles/theme.dark.scss
+++ b/packages/core/src/styles/theme.dark.scss
@@ -1,4 +1,4 @@
-// Copyright (c) 2016-2021 VMware, Inc. All Rights Reserved.
+// Copyright (c) 2016-2022 VMware, Inc. All Rights Reserved.
 // This software is released under MIT license.
 // The full license information can be found in LICENSE in the root directory of this project.
 
@@ -59,5 +59,5 @@
   --cds-alias-status-neutral-shade: #{$cds-global-color-construction-500};
   --cds-alias-status-disabled: #{$cds-global-color-construction-600};
   --cds-alias-status-disabled-tint: #{$cds-global-color-construction-700};
-  --cds-alias-status-disabled-shade: #{$cds-global-color-construction-800};
+  --cds-alias-status-disabled-shade: #{$cds-global-color-construction-900};
 }
